Enterprise_Kubernetes/manifests/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-test
  namespace: cert-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-test
  template:
    metadata:
      labels:
        app: cert-test
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cert-test
  namespace: cert-test
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: cert-test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-test
  namespace: cert-test
  annotations:
    cert-manager.io/cluster-issuer: "http01-prod"
    external-dns.alpha.kubernetes.io/hostname: "cert-test.drintech.online"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cert-test.drintech.online
      secretName: cert-test-tls
  rules:
  - host: cert-test.drintech.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cert-test
            port:
              number: 80
